Error handling and GenericSendGrams usage - update swagger - add error handling - now send grams from uninited account init it first (using GenericSendGrams) - now send grams automatically update source seqno (using GenericSendGrams) - models move to separate package
